# agent-team-noob

./: .env.template  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yaml  entrypoint.sh  pyproject.toml
data/: AGENTS.md
src/team_noob/: __init__.py  agent.py  cli.py  core.py  start_services.py
tests/: test_agent_unit.py  test_cli.py  test_core_notify_server.py
